website/websites/gp4/code/mandelbrot-icc-3.log
BUILD COMMANDS FOR: mandelbrot.icc-3.icc

Tue Apr 22 15:55:06 PDT 2008

/opt/intel/cc/10.1.012/bin/icc  mandelbrot.icc-3.c -o mandelbrot.icc-3.icc_run
mandelbrot.icc-3.c(43): warning #266: function "atoi" declared implicitly
      w = h = atoi(argv[1]);
              ^

mandelbrot.icc-3.c(54): error: expression must have arithmetic or pointer type
              Crv = two * Crv - _1p5;
                    ^

mandelbrot.icc-3.c(55): error: expression must have arithmetic or pointer type
              Civ = two * Civ - one;
                    ^

mandelbrot.icc-3.c(60): error: expression must have arithmetic or pointer type
                  Ziv = two*Zrv*Ziv + Civ;
                        ^

mandelbrot.icc-3.c(61): error: expression must have arithmetic or pointer type
                  Zrv = Trv - Tiv + Crv;
                        ^

mandelbrot.icc-3.c(62): error: expression must have arithmetic or pointer type
                  Trv = Zrv * Zrv;
                        ^

mandelbrot.icc-3.c(63): error: expression must have arithmetic or pointer type
                  Tiv = Ziv * Ziv;
                        ^

compilation aborted for mandelbrot.icc-3.c (code 2)
make[3]: [mandelbrot.icc-3.icc_run] Error 2 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

mandelbrot.icc-3.icc_run %A
Error, could not exec mandelbrot.icc-3.icc_run 120 (No such file or directory)
PATH=/home/dunham/gp4/shootout/bench/mandelbrot:/home/dunham/gp4/shootout/bench/mandelbrot/tmp:/opt/intel/cc/10.1.012/bin:/opt/intel/fc/10.1.012/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.1.2:/opt/sun-jdk-1.4.2.16/bin:/opt/sun-jdk-1.4.2.16/jre/bin:/opt/sun-jdk-1.4.2.16/jre/javaws:/usr/qt/3/bin:/usr/i686-pc-linux-gnu/gnat-gpl-bin/4.1:/usr/libexec/gnat-gpl/i686-pc-linux-gnu/4.1:/usr/games/bin:/opt/cint-5.16.19:/opt/kroc-1.4.0/install/bin:/opt/sun-jdk-1.6.0.06/bin:/opt/sun-jdk-1.4.2.16/bin:/opt/mozart/bin:/opt/groovy-1.5.4/bin:/opt/smlnj/bin:/usr/local/lib/squeak/3.9-8:/opt/stx:/opt/jruby-1.1b1/bin:/opt/Quark:/opt/gnat/bin
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
